[project]
name = "stickers"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "svgpathtools",
    "reportlab",
    "Pillow",
    "typer>=0.24.1",
    "pypdf",
    "shapely>=2.1.2",
]

[tool.mypy]
disable_error_code = ["import-untyped"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.6",
]
